hphp/hack/test/typecheck/like_types/dynamic_coercion/decl_types/ttuple.php.exp
File "ttuple.php", line 7, characters 10-14:
Invalid return type (Typing[4110])
File "ttuple.php", line 6, characters 15-24:
This is a tuple of size 2
File "ttuple.php", line 4, characters 17-23:
It is incompatible with a dynamic value
